--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     </div>
   <main>
-    <h3 class="text-4xl md:text-start text-center text-[#363958] font-bebas py-8 pl-3">WOMAN JACKET</h3>
+    <h3 class="text-4xl md:text-start text-center text-[#363958] font-bebas py-8 w-11/12 m-auto">WOMAN JACKET</h3>
    <div class="grid md:grid-cols-3 grid-cols-1 w-4/5 m-auto gap-8">
     <div class="w-full m-auto p-5 rounded-3xl bg-white-500 shadow-lg shadow-cyan-500/50">
         <img class="bg-[#F1F1F1] rounded-3xl p-4 pb-9" src="images/jacket-1.png" alt="">
@@ -68,7 +68,7 @@
          font-roboto flex bg-gradient-to-r from-[#A4BC46] to-[#85A019]"><img class="w-1/5" src="icons/shopping-cart 1.png" alt=""> BUY NOW</button></span>
      </div>
    </div>
-   <h3 class="text-4xl text-[#363958] font-bebas md:text-start text-center py-8 pl-3">MAN JACKET</h3>
+   <h3 class="text-4xl text-[#363958] font-bebas md:text-start text-center py-8 w-11/12 m-auto">MAN JACKET</h3>
    <div class="grid md:grid-cols-3 grid-cols-1 w-4/5 m-auto gap-8">
     <div class="w-full m-auto p-5 rounded-3xl bg-white-500 shadow-lg shadow-cyan-500/50">
         <img class="bg-[#F1F1F1] rounded-3xl p-4 pb-9" src="images/jacket-4.png" alt="">
