--- a/index.html
+++ b/index.html
@@ -94,7 +94,34 @@
    </div>
   </main>
 
-   
+   <footer class="w-4/5 m-auto mt-10 flex flex-col-reverse md:flex-row ">
+    <div class="md:w-1/2  w-full">
+        <div class="flex items-center bg-white-500 shadow-lg shadow-cyan-500/50 rounded-2xl h-1/6 ">
+            <img class="h-1/3" src="icons/house.png" alt="">
+            <span class="items-center font-roboto ">
+                <h3 class="font-bold text-3xl text-[#363958]">Find the perfect Fit</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Voluptatibus, tempore!</p>
+            </span>
+        </div>
+        <div class="flex items-center bg-white-500 shadow-lg shadow-cyan-500/50 rounded-2xl h-1/6">
+            <img class="h-1/3 " src="icons/box.png" alt="">
+            <span class="items-center font-roboto ">
+                <h3 class="font-bold text-3xl text-[#363958]">Find the perfect Fit</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Voluptatibus, tempore!</p>
+            </span>
+        </div>
+        <div class="flex items-center bg-white-500 shadow-lg shadow-cyan-500/50 rounded-2xl h-1/6">
+            <img class="h-1/3" src="icons/question.png" alt="">
+            <span class="items-center font-roboto ">
+                <h3 class="font-bold text-3xl text-[#363958]">Find the perfect Fit</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Voluptatibus, tempore!</p>
+            </span>
+        </div>
+      
+    </div>
+
+    <div class="md:w-1/2 w-full pb-9"><img src="images/shopping.png" alt=""></div>
+   </footer>
     
 </body>
 </html>
